[metadata]
name = btyper3
version = 3.2.0
author = Laura M. Carroll
author_email = lmc297@cornell.edu
url = https://github.com/lmc297/btyper3
description = In silico taxonomic classification of Bacillus cereus group isolates using assembled genomes
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
platform = any
keywords = bacillus, taxonomy, genome, ANI
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/lmc297/btyper3/issues
    Publication = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7536271/
    Changelog = https://github.com/lmc297/btyper3/blob/master/archive/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = find:
setup_requires =
    setuptools >=38.3.0
install_requires =
    numpy >=1.18
    biopython >=1.74
    pandas >=1.0
    pyfastani >=0.3

[options.entry_points]
console_scripts =
    btyper3 = btyper3:main

[bdist_wheel]
universal = true
compression = stored
